# web-crawler-ai-engine

./: .gitignore  AI_ENGINEERING_OPERATING_SYSTEM.md  README.md
ai_website_categorizer/: .env.example  Dockerfile  docker-compose.yml  format_report.py  makers_nutrition_report.md  makers_nutrition_results.json  pyproject.toml  requirements.txt  scratch.py  trigger_makersnutrition.py
ai_website_categorizer/alembic/: env.py
ai_website_categorizer/alembic/versions/: 0001_initial_migration.py  0002_add_extracted_content_jsonb.py  0003_rename_extracted_content_to_page_document.py  0004_add_classification_result.py
ai_website_categorizer/app/api/: router.py
ai_website_categorizer/app/categorizer/: confidence.py  deterministic.py  embedding_classifier.py  llm_classifier.py
ai_website_categorizer/app/cleaners/: html_cleaner.py  text_normalizer.py
ai_website_categorizer/app/core/: config.py  dependencies.py  exceptions.py  logger.py
ai_website_categorizer/app/crawler/: frontier.py  orchestrator.py  robots.py  sitemap.py  url_utils.py
ai_website_categorizer/app/database/: redis_client.py  session.py
ai_website_categorizer/app/embeddings/: generator.py  input_builder.py
ai_website_categorizer/app/extractors/: html_extractor.py  link_extractor.py  metadata_extractor.py
ai_website_categorizer/app/models/: category.py  embedding.py  job.py  page.py
ai_website_categorizer/app/observability/: metrics.py
ai_website_categorizer/app/renderers/: __init__.py  base.py  playwright_renderer.py  resource_policy.py  static.py  (+1 more)
ai_website_categorizer/tests/: conftest.py
(+36 files in other folders)
